--- a/index.html
+++ b/index.html
@@ -1,29 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fibonacci Review</title>
-</head>
+  </head>
 
-<body>
-    <h1>You Can Count On Fibonacci</h1>
+  <body>
+    <div>
+      <h1>You Can Count On Fibonacci</h1>
+    </div>
 
-    <h2>Fibonacci’s Food Truck: Where Flavor and Sequence Unite!</h2>
-    <p>At Fibonacci’s Food Truck, every bite is a delightful journey through a sequence of flavors that leaves you
-        wanting more. Just like the Fibonacci sequence, each dish builds upon the last, creating a symphony of taste
-        that is both unique and familiar. From the Fibonacci Fries to the Golden Ratio Grilled Cheese, every item on the
-        menu is a testament to the beauty of blending mathematics with gastronomy. Fibonacci’s Food Truck truly delivers
-        on its promise - a culinary experience you can count on!</p>
+    <div>
+      <h2>Fibonacci’s Food Truck: Where Flavor and Sequence Unite!</h2>
+      <p>
+        At Fibonacci’s Food Truck, every bite is a delightful journey through a
+        sequence of flavors that leaves you wanting more. Just like the
+        Fibonacci sequence, each dish builds upon the last, creating a symphony
+        of taste that is both unique and familiar. From the Fibonacci Fries to
+        the Golden Ratio Grilled Cheese, every item on the menu is a testament
+        to the beauty of blending mathematics with gastronomy. Fibonacci’s Food
+        Truck truly delivers on its promise - a culinary experience you can
+        count on!
+      </p>
 
-    
-    <h2>The Golden Spiral: A Journey into the Fibonacci Foodtruck</h2>
-    <p>The Fibonacci Foodtruck is not just a name, but a symbol of the harmonious blend of mathematics and culinary art.
-        The name Fibonacci was inspired by the famous Italian mathematician, Leonardo of Pisa, also known as
-        Fibonacci. He introduced the Fibonacci sequence to the Western world in his 1202 book “Liber Abaci”. This
-        sequence, where each number is the sum of the two preceding ones, has found applications in various fields,
-        including art, architecture, and nature.</p>
-</body>
+      <h2>The Golden Spiral: A Journey into the Fibonacci Foodtruck</h2>
+      <p>
+        The Fibonacci Foodtruck is not just a name, but a symbol of the
+        harmonious blend of mathematics and culinary art. The name Fibonacci was
+        inspired by the famous Italian mathematician, Leonardo of Pisa, also
+        known as Fibonacci. He introduced the Fibonacci sequence to the Western
+        world in his 1202 book “Liber Abaci”. This equence, where each number is
+        the sum of the two preceding ones, has found applications in various
+        fields, including art, architecture, and nature.
+      </p>
 
+      <p>
+        The birth of Fibonacci’s Food Truck was inspired by the universal appeal
+        of the Fibonacci sequence, which in turn inspired the founders of
+        Fibonacci’s Food Truck to embark on a culinary adventure. They
+        envisioned a food experience that would unite the precision of
+        mathematics with the artistry of cooking. The idea was to create dishes
+        that, like the numbers in the Fibonacci sequence, would each be a sum of
+        the delicious flavorsthat came before. Thus, Fibonacci’s Food Truck was
+        born, serving up a unique blend of taste and traditionthat continues to
+        captivate food lovers everywhere
+      </p>
+    </div>
+
+    <div>
+      <h2>The Signature Dishes</h2>
+      <p>
+        The Number 1, The Other Number 1, and The Golden Ratio At Fibonacci’s
+        Food Truck, the menu is a gastronomic tribute to the Fibonacci sequence.
+        The Number 1 is a wrap filled with Buffalo chicken, romaine lettuce,
+        tomatoes, carrots, ranch, and blue cheese. This classic dish sets the
+        tone for the rest of the menu, much like the number 1 sets the stage in
+        the Fibonacci sequence. The Other Number 1 is a delightful vegetarian
+        variation of the first, featuring hummus, romaine lettuce, sun-dried
+        tomatoes, Kalamata olives, feta cheese, and tzatziki sauce. But the star
+        of the show is undoubtedly The Golden Ratio. These fries, drenched in
+        cheese and topped with pastrami and other toppings, are a culinary
+        representation of the golden ratio, a key element of the Fibonacci
+        sequence. Each bite is a testament to the harmony that can be achieved
+        when mathematics and gastronomy unite. At Fibonacci’s Food Truck, every
+        dish is a delicious journey through the Fibonacci sequence. Count on
+        Fibonnaci's for flavor!
+      </p>
+    </div>
+  </body>
 </html>
